--- a/index.html
+++ b/index.html
@@ -55,8 +55,14 @@
 	<![endif]-->
 
 	</head>
-	<body>
+	<!-- <body> -->
 		
+
+	<body onload="visits()">
+	<!-- <p>You are visitor # </p> -->
+
+	
+	
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">	
@@ -122,6 +128,9 @@
 			</div>
 		</div>
 	</div>
+
+	<p id ="Visitor_Count"></p>
+	<script type='text/javascript' src="js/visitor_count.js"></script>
 
 	<div id="fh5co-resume" class="fh5co-bg-color">
 		<div class="container">
