--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/DP.JPG);"></div>
 							<h1><span>Jagan Sekaran</span></h1>
-							<h3><span>Cloud Engineer / Database Admin</span></h3>
+							<h3><span>Cloud / Database Admin</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://twitter.com/Just4JAG"><i class="icon-twitter2"></i></a></li>
 									<!-- <li><a href="#"><i class="icon-facebook2"></i></a></li> -->
 									<li><a href="https://www.linkedin.com/in/JAG010"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="https://jag.hashnode.dev"><i class="icon-blog"></i></a></li>
+									<li><a href="https://blog.jagan-sekaran.me"><i class="icon-blog"></i></a></li>
 									<li><a href="https://github.com/JAG-010"><i class="icon-github"></i></a></li>
 								</ul>
 							</p>
@@ -105,7 +105,7 @@
 						<li><span class="first-block">Full Name:</span><span class="second-block">Jagannathan Sekaran</span></li>
 						<!-- <li><span class="first-block">Phone:</span><span class="second-block">+1 (860) 938-6533</span></li> -->
 						<li><span class="first-block">Email:</span><span class="second-block">jagann.sekaran@gmail.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">https://jag.hashnode.dev</span></li>
+						<li><span class="first-block">Website:</span><span class="second-block">https://blog.jagan-sekaran.me</span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">Atlanta, GA</span></li>
 					</ul>
 				</div>
