--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>JAG's Resume</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- <meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="freehtml5.co" /> -->
 
-	<!-- 
 	//////////////////////////////////////////////////////
 
 	FREE HTML5 TEMPLATE 
@@ -301,7 +297,7 @@
 					<br>
 					<br>
 					<br>
-					<p><a href="./files/JAGANNATHAN_SEKARAN_DevOps(DBA)_2021_updated.pdf" download="newfilename" class="btn btn-default btn-lg">Download</a></p>
+					<p><a href="./files/JAGAN_SEKARAN_Cloud_2021.pdf" download="newfilename" class="btn btn-default btn-lg">Download</a></p>
 					<p id ="Visitor_Count"></p>
 					<script type='text/javascript' src="js/visitor_count.js"></script>
 				</div>
