--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 					<br>
 					<br>
 					<br>
-					<p><a href="./files/JAGAN_SEKARAN_Cloud_2021.pdf" download="newfilename" class="btn btn-default btn-lg">Download</a></p>
+					<p><a href="./files/JAGAN_SEKARAN_Cloud_2021.pdf" download="JAGAN_SEKARAN_Cloud_2021" class="btn btn-default btn-lg">Download</a></p>
 					<p id ="Visitor_Count"></p>
 					<script type='text/javascript' src="js/visitor_count.js"></script>
 				</div>
