--- a/index.html
+++ b/index.html
@@ -301,6 +301,63 @@
 		</div>
 	</div>
 
+	<div id="fh5co-blog">
+		<div class="container">
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<h2>Blog Post</h2>
+					<!-- <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p> -->
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="fh5co-blog animate-box">
+						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-1.jpg);"></a>
+						<div class="blog-text">
+							<span class="posted_on">Aug. 30th 2021</span>
+							<h3><a href="#">Cloud Resume Challenge on Amazon Web Service</a></h3>
+							<p>Building my full-stack resume on AWS</p>
+							<ul class="stuff">
+								<!-- <li><i class="icon-heart2"></i>249</li>
+								<li><i class="icon-eye2"></i>308</li> -->
+								<li><a href="https://blog.jagan-sekaran.me/cloud-resume-challenge-aws">Read More<i class="icon-arrow-right22"></i></a></li>
+							</ul>
+						</div> 
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="fh5co-blog animate-box">
+						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-2.jpg);"></a>
+						<div class="blog-text">
+							<span class="posted_on">Jul. 15th 2021</span>
+							<h3><a href="https://blog.jagan-sekaran.me/aws-lambda-function-for-oracle-database">AWS Lambda function for Oracle database</a></h3>
+							<p>Lambda function to connect and query oracle RDS database</p>
+							<ul class="stuff">
+								<!-- <li><i class="icon-heart2"></i>249</li>
+								<li><i class="icon-eye2"></i>308</li> -->
+								<li><a href="https://blog.jagan-sekaran.me/aws-lambda-function-for-oracle-database">Read More<i class="icon-arrow-right22"></i></a></li>
+							</ul>
+						</div> 
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="fh5co-blog animate-box">
+						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-3.jpg);"></a>
+						<div class="blog-text">
+							<span class="posted_on">Jul. 3rd 2021</span>
+							<h3><a href="https://blog.jagan-sekaran.me/terraform101">Terraform 101 </a></h3>
+							<p>All you need to know about Terraform to get started</p>
+							<ul class="stuff">
+								<!-- <li><i class="icon-heart2"></i>249</li>
+								<li><i class="icon-eye2"></i>308</li> -->
+								<li><a href="https://blog.jagan-sekaran.me/terraform101">Read More<i class="icon-arrow-right22"></i></a></li>
+							</ul>
+						</div> 
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	
 	<div id="fh5co-started" class="fh5co-bg-color">
 		<div class="overlay"></div>
