Updated experiance and clour scheme 2

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/DP.JPG);"></div>
 							<h1><span>Jagan Sekaran</span></h1>
-							<h3><span>Cloud / Database Admin</span></h3>
+							<h3><span>Cloud Engineer</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://twitter.com/Just4JAG"><i class="icon-twitter2"></i></a></li>
@@ -163,18 +163,33 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Cloud/DB Admin</h3>
-									<span class="company">April 2017 – Present</span>
+									<h3 class="timeline-title">Sr. Cloud Engineer</h3>
+									<span class="company">November 2021 – Present</span>
 								</div>
 								<div class="timeline-body">
 									<p>• Administrating AWS cloud infrastructure</p>
-									<p>• Worked on building CI/CD pipeline using Git, Jenkins, Maven, Nexus, Docker, etc.</p>
+									<p>• Administrating Microsoft Office 365</p>
+									<p>• Managing infrastructure using Terraform </p>
+									<p>• Managing AzureAD</p>			
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Cloud/DB Admin</h3>
+									<span class="company">April 2017 – October 2021</span>
+								</div>
+								<div class="timeline-body">
+									<p>• Administrating AWS cloud infrastructure</p>
+									<p>• Worked on building CI/CD pipeline</p>
 									<p>• Managed infrastructure using Terraform </p>
 									<p>• Database Administration</p>			
 								</div>
 							</div>
 						</li>
-						<li class="timeline-inverted animate-box">
+						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -189,7 +204,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="animate-box timeline-unverted">
+						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
