Updated Twitter profile link

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 							<h3><span>Cloud Engineer</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="https://twitter.com/Just4JAG"><i class="icon-twitter2"></i></a></li>
+									<li><a href="https://twitter.com/JAG2wts"><i class="icon-twitter2"></i></a></li>
 									<!-- <li><a href="#"><i class="icon-facebook2"></i></a></li> -->
 									<li><a href="https://www.linkedin.com/in/JAG010"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="https://blog.jagan-sekaran.me"><i class="icon-blog"></i></a></li>
@@ -131,7 +131,7 @@
 					</p>
 					<!-- <p>
 						<ul class="fh5co-social-icons">
-							<li><a href="https://twitter.com/Just4JAG"><i class="icon-twitter2"></i></a></li> -->
+							<li><a href="https://twitter.com/JAG2wts"><i class="icon-twitter2"></i></a></li> -->
 							<!-- <li><a href="#"><i class="icon-facebook3"></i></a></li> -->
 							<!-- <li><a href="https://www.linkedin.com/in/JAG010"><i class="icon-linkedin2"></i></a></li>
 							<li><a href="https://jag.hashnode.dev"><i class="icon-blog"></i></a></li>
