--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
 								</div>
 								<div class="timeline-body">
 									<p>• Administrating AWS cloud infrastructure</p>
-									<p>• Administrating Microsoft Office 365</p>
+									<p>• Worked on building CI/CD pipeline</p>									
+									<p>• Administrating Microsoft Intune</p>
 									<p>• Managing infrastructure using Terraform </p>
 									<p>• Managing AzureAD</p>			
 								</div>
@@ -183,9 +184,9 @@
 								</div>
 								<div class="timeline-body">
 									<p>• Administrating AWS cloud infrastructure</p>
-									<p>• Worked on building CI/CD pipeline</p>
 									<p>• Managed infrastructure using Terraform </p>
-									<p>• Database Administration</p>			
+									<p>• Database Administration Oracle/MS-SQL</p>
+									<p>• Automate daily tasks using shell script</p>			
 								</div>
 							</div>
 						</li>
@@ -387,7 +388,7 @@
 					<br>
 					<br>
 					<br>
-					<p><a href="./files/JAGAN_SEKARAN_Cloud_2021.pdf" download="JAGAN_SEKARAN_Cloud_2021" class="btn btn-default btn-lg">Download</a></p>
+					<p><a href="./files/JAGAN_SEKARAN_CloudEng_2022.pdf" download="JAGAN_SEKARAN_CloudEng_2022" class="btn btn-default btn-lg">Download</a></p>
 					<!-- <p id ="Visitor_Count"></p>
 					<script type='text/javascript' src="js/visitor_count.js"></script> -->
 				</div>
@@ -400,7 +401,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p style="font-size:.5vw">&copy; 2021 All Rights Reserved. </p>
+					<p style="font-size:.5vw">&copy; 2022 All Rights Reserved. </p>
 				</div>
 			</div>
 		</div>
